<resources>
    <string name="app_name">WhatsApp</string>
    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select Country</string>
    <string name="country_code_and_phone_code" translatable="false">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code" translatable="false">%1$s +%2$s</string>
    <string name="country_full_name_and_name_code" translatable="false">%1$s (%2$s)</string>
    <string name="country_full_name_name_code_and_phone_code" translatable="false">%1$s (%2$s) +%3$s</string>
    <string name="error_unregister_carrier_number" translatable="false">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>

    <string name="conversation_Notification">Play sounds for incoming and outgoing \n messages</string>
    <string name="title_activity_menu__basic">MenuActivity_Basic</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="share_whatsapp_text">Lets chat on WhatsApp! Its a fast, simple, and secure app we can use to message and call each other for free. Get it at https://whatsapp.com/dl/</string>

    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_step_verification">Two-step Verification</string>
    <string name="change_number">Change Number</string>
    <string name="request_account_info">Request account info</string>
    <string name="delete_my_account">Delete my account</string>

    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="about">About</string>
    <string name="user_status">User Status</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_phone_number">User Phone Number</string>
    
    <string name="enter_the_phone_number">Enter the Phone Number</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="get_the_otp">Get the Otp</string>
    <string name="verify">Verify</string>
    <string name="working">Working</string>

    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="storage_and_data">Storage and Data</string>
    <string name="help">Help</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="from">from</string>
    <string name="trojans">TROJANS</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App Info</string>
    
    <string name="chats_info">Theme, wallpapers, chat history</string>
    <string name="notifications_info">Message, group &amp; call tones</string>
    <string name="storage_info">Network usage, auto-download</string>
    <string name="help_info">FAQ, contact us, privacy policy</string>
    <string name="account_info">Privacy, security, change number</string>
    <string name="default_user_bio">Hey there! I\'m using WhatsApp.</string>
    
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="verify_phone_description">WhatsApp will send an SMS message to verify your phone number. What\'s my number?</string>
    <string name="carrier_sms_charges">Carrier SMS charges may apply</string>
    <string name="next_caps">NEXT</string>
    
    <string name="waiting_otp">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="submit_otp">submit otp</string>
    <string name="resend_code">Resend code</string>
    <string name="call_me">Call me</string>
    
    <string name="chats_tab">CHATS</string>
    <string name="status_tab">STATUS</string>
    <string name="calls_tab">CALLS</string>
    
    <string name="no_status">No Status</string>
    <string name="type_a_message">Type a message</string>
    <string name="any_name">Any Name</string>

    <string name="notification">Notification</string>
    <string name="conversation_tones">Conversation tones</string>
    <string name="conversation_tones_desc">Play sounds for incoming and outgoing messages</string>
    <string name="message">Message</string>
    <string name="notification_tones">Notification tones</string>
    <string name="vibration">Vibration</string>
    <string name="popup_notification">Popup notification</string>
    <string name="light">Light</string>
    <string name="use_high_priority_notifications">Use high priority notifications</string>
    <string name="high_priority_desc">Show previews of notifications at the top of the screen</string>
    <string name="groups">Groups</string>
    <string name="calls">Calls</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_str">Default</string>
    <string name="not_available">Not Available</string>
</resources>