<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEnterPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivHelpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_more_vert_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVerifyDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/verify_phone_description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/llToolbar" />

    <LinearLayout
        android:id="@+id/llPhoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvVerifyDesc">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/phone_number"
            android:autofillHints="phone"
            android:inputType="phone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCarrierCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/carrier_sms_charges"
        android:textColor="#494747"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/llPhoneInput" />

    <Button
        android:id="@+id/nextPhnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/next_caps"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/flProgressBarLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
