<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.SettingActivity">

    <LinearLayout
        android:id="@+id/llToolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivSettingsArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llToolbarSettings">

        <LinearLayout
            android:id="@+id/helper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSettingsProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivSettingsProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/masaischhol" />

                <LinearLayout
                    android:id="@+id/profile_click"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/user_name"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvSettingsUserBio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/default_user_bio"
                        android:textColor="#504D4D"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAccountProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivAccountSettings"
                    android:layout_width="30dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_account_key" />

                <LinearLayout
                    android:id="@+id/account_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsAccountName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/account"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSettingsAccInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/account_info"
                        android:textColor="#504D4D"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llChatsSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivChatsSettings"
                    android:layout_width="30dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_chats_settings" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsChatName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/chats"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSettingsChatsInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/chats_info"
                        android:textColor="#504D4D"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNotificationSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivNotificationSettings"
                    android:layout_width="30dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_notification_settings" />

                <LinearLayout
                    android:id="@+id/notification_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsNotifyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/notifications"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSettingsNotifyInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/notifications_info"
                        android:textColor="#504D4D"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStorageSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivStorageSettings"
                    android:layout_width="30dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_storage_and_data" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsStorageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/storage_and_data"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSettingsStorageInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/storage_info"
                        android:textColor="#504D4D"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llHelpSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivHelpSettings"
                    android:layout_width="30dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_help_settings" />

                <LinearLayout
                    android:id="@+id/help_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSettingsHelpName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/help"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSettingsHelpInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/help_info"
                        android:textColor="#504D4D"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llInviteFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivInviteFriend"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_invite_friend" />

                <TextView
                    android:id="@+id/tvInviteFriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/invite_a_friend"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="#555454"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFromTrojans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trojans"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
