<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyOtpActivity">

    <LinearLayout
        android:id="@+id/llToolbarVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVerifiedPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="+91 91328 76456" />

        <ImageView
            android:id="@+id/ivHelpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_more_vert_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVerifyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/llToolbarVerify">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:text="@string/waiting_otp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="+91 91328 76456" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/wrong_number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOtpInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/llVerifyNumber">

        <EditText
            android:id="@+id/tvInputOtp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="number"
            android:hint="--- ---"
            android:gravity="center"
            android:textSize="24sp"
            android:autofillHints="smsOTPCode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_6_digit_code"
            android:textColor="#404142"
            android:textSize="15sp" />

        <Button
            android:id="@+id/otpSumbitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit_otp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/resend_code"
        android:textColor="#404142"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/ic_otp_msg"
        app:layout_constraintTop_toBottomOf="@id/llOtpInput" />

    <TextView
        android:id="@+id/tvCallMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/call_me"
        android:textColor="#404142"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/ic_otp_call"
        app:layout_constraintTop_toBottomOf="@id/tvResendCode" />

    <FrameLayout
        android:id="@+id/flProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
